# toy-lang

./: Cargo.toml  README.md  debug.ll  grammar.txt
.github/workflows/: rust.yml
examples/: bench.rs  bench.tls  main.rs  main.tls
src/: ast.rs  ast_old.rs_  compiler.rs  grammar.pest  interpreter.rs  interpreter.rs_  lib.rs  main.rs
src/artefact/: ast.rs  tokens.rs
src/artefact/ast/: mod.rs
src/artefact/tokens/: group.rs  keyword.rs  lit.rs  mod.rs  op.rs  span.rs
src/ast/: access.rs  assign.rs  binary.rs  branch.rs  call.rs  expr.rs  function.rs  function_gen.rs  ident.rs  mod.rs  module.rs  scope.rs  statement.rs  term.rs  type.rs  unary.rs
src/compiler/: err.rs  instance.rs  mod.rs  module.rs  optimizer.rs
src/compiler/codegen/: access.rs  assign.rs  binary.rs  branch.rs  call.rs  expr.rs  function.rs  lit.rs  mod.rs  module.rs  scope.rs  statement.rs  term.rs  unary.rs
src/interpreter/: mod.rs
src/parse/: lexer.rs  parser.rs
tests/: lexer.rs  script.tls  tests.rs
