[package]
name = "toy-lang"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.8.0"
colorful = "0.2.1"
log = "0.4.14"
env_logger = "0.9.0"
stackalloc = "1.1.1"
backtrace = "0.3.61"
inkwell = "0.1.0-llvm8sample"
