[package]
name = "toy-lang"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
env_logger = "0.9.0"
inkwell = "0.1.0-llvm8sample"
pest = "2.1.3"
pest_derive = "2.1.0"
itertools = "0.10.1"
